k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apps
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: bird
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: apps
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: bird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: bird
    spec:
      containers:
        - name: frontend
          image: frontend:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
