k8s/mysql-ums.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-ums
  namespace: apps
  labels:
    app.kubernetes.io/name: mysql-ums
    app.kubernetes.io/part-of: bird
spec:
  type: ClusterIP
  selector:
    app: mysql-ums
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-ums
  namespace: apps
  labels:
    app.kubernetes.io/name: mysql-ums
    app.kubernetes.io/part-of: bird
spec:
  serviceName: mysql-ums
  replicas: 1
  selector:
    matchLabels:
      app: mysql-ums
  template:
    metadata:
      labels:
        app: mysql-ums
        app.kubernetes.io/name: mysql-ums
        app.kubernetes.io/part-of: bird
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/name: mysql-ums
          app.kubernetes.io/part-of: bird
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 2Gi
