k8s/twitter.yaml
apiVersion: v1
kind: Service
metadata:
  name: twitter
  namespace: apps
  labels:
    app.kubernetes.io/name: twitter
    app.kubernetes.io/part-of: bird
spec:
  type: ClusterIP
  selector:
    app: twitter
  ports:
    - name: http
      port: 9001
      targetPort: 9001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter
  namespace: apps
  labels:
    app.kubernetes.io/name: twitter
    app.kubernetes.io/part-of: bird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitter
  template:
    metadata:
      labels:
        app: twitter
        app.kubernetes.io/name: twitter
        app.kubernetes.io/part-of: bird
    spec:
      containers:
        - name: twitter
          image: twitter:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9001
              name: http
