k8s/ums.yaml
apiVersion: v1
kind: Service
metadata:
  name: ums
  namespace: apps
  labels:
    app.kubernetes.io/name: ums
    app.kubernetes.io/part-of: bird
spec:
  type: ClusterIP
  selector:
    app: ums
  ports:
    - name: http
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ums
  namespace: apps
  labels:
    app.kubernetes.io/name: ums
    app.kubernetes.io/part-of: bird
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ums
  template:
    metadata:
      labels:
        app: ums
        app.kubernetes.io/name: ums
        app.kubernetes.io/part-of: bird
    spec:
      containers:
        - name: ums
          image: ums:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              name: http
